--- a/cbshell-chart/templates/deployment.yaml
+++ b/cbshell-chart/templates/deployment.yaml
@@ -13,102 +13,10 @@ metadata:
     {{- end}}
   managedFields:
     - apiVersion: apps/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:annotations:
-            f:field.cattle.io/publicEndpoints: {}
-          f:labels:
-            .: {}
-            f:workload.user.cattle.io/workloadselector: {}
-        f:spec:
-          f:progressDeadlineSeconds: {}
-          f:replicas: {}
-          f:revisionHistoryLimit: {}
-          f:selector: {}
-          f:strategy:
-            f:rollingUpdate:
-              .: {}
-              f:maxSurge: {}
-              f:maxUnavailable: {}
-            f:type: {}
-          f:template:
-            f:metadata:
-              f:labels:
-                .: {}
-                f:workload.user.cattle.io/workloadselector: {}
-              f:namespace: {}
-            f:spec:
-              f:containers:
-                k:{"name":"shell-0"}:
-                  .: {}
-                  f:image: {}
-                  f:imagePullPolicy: {}
-                  f:name: {}
-                  f:ports:
-                    .: {}
-                    k:{"containerPort":22,"protocol":"TCP"}:
-                      .: {}
-                      f:containerPort: {}
-                      f:name: {}
-                      f:protocol: {}
-                  f:resources: {}
-                  f:securityContext:
-                    .: {}
-                    f:allowPrivilegeEscalation: {}
-                    f:privileged: {}
-                    f:readOnlyRootFilesystem: {}
-                    f:runAsNonRoot: {}
-                  f:terminationMessagePath: {}
-                  f:terminationMessagePolicy: {}
-              f:dnsPolicy: {}
-              f:restartPolicy: {}
-              f:schedulerName: {}
-              f:securityContext: {}
-              f:terminationGracePeriodSeconds: {}
-              f:volumes:
-                .: {}
-                k:{"name":"vol-dv3za"}:
-                  .: {}
-                  f:name: {}
-                  f:persistentVolumeClaim:
-                    .: {}
-                    f:claimName: {}
       manager: agent
       operation: Update
       time: '2024-05-03T22:56:01Z'
     - apiVersion: apps/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:annotations:
-            .: {}
-            f:deployment.kubernetes.io/revision: {}
-        f:status:
-          f:availableReplicas: {}
-          f:conditions:
-            .: {}
-            k:{"type":"Available"}:
-              .: {}
-              f:lastTransitionTime: {}
-              f:lastUpdateTime: {}
-              f:message: {}
-              f:reason: {}
-              f:status: {}
-              f:type: {}
-            k:{"type":"Progressing"}:
-              .: {}
-              f:lastTransitionTime: {}
-              f:lastUpdateTime: {}
-              f:message: {}
-              f:reason: {}
-              f:status: {}
-              f:type: {}
-          f:observedGeneration: {}
-          f:readyReplicas: {}
-          f:replicas: {}
-          f:unavailableReplicas: {}
-          f:updatedReplicas: {}
       manager: kube-controller-manager
       operation: Update
       subresource: status
@@ -158,6 +66,7 @@ spec:
             runAsNonRoot: false
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          commands: ["sh", "-c", "chown -R 1000:1000 /home/bob"]
           volumeMounts:
             - mountPath: "/home"
               name: home
