--- a/cbshell-chart/templates/secrets.yaml
+++ b/cbshell-chart/templates/secrets.yaml
@@ -9,5 +9,5 @@ metadata:
     {{- end}}
 type: Opaque
 stringData:
-  pubkey: {{ .Values.users.pubkey }}
+  authorized_keys: {{ .Values.users.pubkey }}
 {{- end }}
