--- a/cbshell-chart/templates/deployment.yaml
+++ b/cbshell-chart/templates/deployment.yaml
@@ -77,7 +77,15 @@ spec:
           command:
             - sh
             - -c
-            - (chown -R 1000:1000 /home/bob; chmod 0700 /home/bob/.ssh; chmod 0600 /home/bob/.ssh/authorized_keys)
+            - (mkdir -p /home/bob/.ssh; cp /tmp/file/authroized_keys /home/bob/.ssh; chown -R 1000:1000 /home/bob; chmod 0700 /home/bob/.ssh; chmod 0600 /home/bob/.ssh/authroized_keys)
+      initContainer:
+        - name: mount home .ssh 
+          image: bpfx/cbshell
+          command: ["sh", "-c", "chown -R 1000:1000 /home/bob", "&&", "sh", "-c", "chmod 700 /home/bob/.ssh", "&&", "sh -c", "chmod 600 /home/bob/.ssh/authorized_keys"]
+          volumeMounts:
+            - mountPath: "/tmp/file"
+              name: authorizedkeys
+
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
