--- a/cbshell-chart/templates/deployment.yaml
+++ b/cbshell-chart/templates/deployment.yaml
@@ -74,10 +74,10 @@ spec:
               {{- end }}
             - mountPath: "/tmp/file"
               name: authorizedkeys
-          command:
-            - sh
-            - -c
-            - (mkdir -p /home/bob/.ssh; cp /tmp/file/authorized_keys /home/bob/.ssh; chown -R 1000:1000 /home/bob; chmod 0700 /home/bob/.ssh; chmod 0600 /home/bob/.ssh/authorized_keys)
+          #command:
+          #  - sh
+          #  - -c
+          #  - (mkdir -p /home/bob/.ssh; cp /tmp/file/authorized_keys /home/bob/.ssh; chown -R 1000:1000 /home/bob; chmod 0700 /home/bob/.ssh; chmod 0600 /home/bob/.ssh/authorized_keys)
       initContainer:
         - name: mount home .ssh 
           image: bpfx/cbshell
