--- a/cb_radarr/templates/deployment.yaml
+++ b/cb_radarr/templates/deployment.yaml
@@ -428,7 +428,7 @@ spec:
                 - key: {{ if .Values.usingNewRecommendedLabels }}app.kubernetes.io/name{{ else }}app{{ end }}
                   operator: In
                   values:
-                  - {{ template "name" . }}
+                  - {{ .Chart.name }}
           - weight: 100
             podAffinityTerm:
               topologyKey: "failure-domain.beta.kubernetes.io/zone"
@@ -437,7 +437,7 @@ spec:
                 - key: {{ if .Values.usingNewRecommendedLabels }}app.kubernetes.io/name{{ else }}app{{ end }}
                   operator: In
                   values:
-                  - {{ template "name" . }}
+                  - {{ .Chart.name }}
 {{- /*
 SORRY for this mess, this is needed because of the above
 */}}
