--- a/cb_radarr/templates/deployment.yaml
+++ b/cb_radarr/templates/deployment.yaml
@@ -7,6 +7,10 @@ kind: Deployment
 
 metadata:
   name: {{ .Chart.Name }}
+  labels:
+    {{- range $key, $val := .Values.labels }}
+    {{ $key }}: {{ $val | quote }}
+    {{- end}}
 
 # Deployment specification
 spec:
