--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
   labels:
+    app: cbradarr
     {{- range $key, $val := .Values.labels }}
     {{ $key }}: {{ $val | quote }}
     {{- end}}
