--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -11,7 +11,8 @@ spec:
       app: cbradarr
   template:
     metadata:
-      app: cbradarr
+      labels:
+        app: cbradarr
   spec:
     containers:
       - name: {{ .Chart.Name }}
