--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -30,3 +30,10 @@ spec:
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          volumeMounts: 
+            - mountPath: "/config"
+              name: {{ .Chart.Name }}-config
+          volumes:
+            - name: {{ .Chart.Name }}-config
+              persistentVolumeClaim:
+                claimName: {{ .Chart.Name }}-pvc
