--- a/cb-radarr/templates/pv.yaml
+++ b/cb-radarr/templates/pv.yaml
@@ -18,5 +18,6 @@ spec:
   accessMode: ReadWriteOnce
   storageClassName: longhorn
   csi:
+    driver: driver.longhorn.io
     fsType: ext4
 {{- end }}
