--- a/cb-radarr/templates/pvc.yaml
+++ b/cb-radarr/templates/pvc.yaml
@@ -10,6 +10,7 @@ metadata:
     {{- end}}
 spec:
  storageClassName: {{ .Values.persistence.storageClass }}
+ volumeName: {{ .Chart.Name }}-pv
  accessModes:
    - {{ .Values.persistence.accessMode | quote }}
  resources:
