--- a/cb-radarr/templates/pv.yaml
+++ b/cb-radarr/templates/pv.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolume
 apiVersion: v1
 metadata:
- name: {{ .Chart.Name }}
+ name: {{ .Chart.Name }}-pv
  labels:
     {{- range $key, $val := .Values.labels }}
     {{ $key }}: {{ $val | quote }}
