--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -25,13 +25,13 @@ spec:
           image: ghcr.io/hotio/radarr:release
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 7878
+            - containerPort: {{ .Values.network.internalPort}}
               protocol: TCP
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts: 
-            - mountPath: "/config"
+            - mountPath: {{ .Values.storage.mountPoint }}
               name: {{ .Chart.Name }}-config
       volumes:
         - name: {{ .Chart.Name }}-config
