--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -22,11 +22,11 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: ghcr.io/hotio/radarr:release
-          imagePullPolicy: IfNotPresent
+          image: {{ .Values.container.repo }}/{{ .Values.container.image }}:{{ .Values.container.version }}
+          imagePullPolicy: {{ .Values.container.pull }}
           ports:
-            - containerPort: {{ .Values.network.internalPort}}
-              protocol: TCP
+            - containerPort: {{ .Values.network.internalPort }}
+              protocol: {{ .Values.network.proto }}
           resources: {}
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
