--- a/cb-radarr/templates/deployment.yaml
+++ b/cb-radarr/templates/deployment.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: {{ .Values.dns.fqdn}}
+    external-dns.alpha.kubernetes.io/ttl: {{ .Values.dns.ttl }}
   labels:
     app: cbradarr
     {{- range $key, $val := .Values.labels }}
