--- a/cb-sonarr/templates/deployment.yaml
+++ b/cb-sonarr/templates/deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: {{ .Chart.Name }}
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: {{ .Values.dns.fqdn}}
-    external-dns.alpha.kubernetes.io/ttl: {{ .Values.dns.ttl }}
+    external-dns.alpha.kubernetes.io/hostname: "{{ .Values.dns.fqdn }}"
+    external-dns.alpha.kubernetes.io/ttl: "{{ .Values.dns.ttl }}"
   labels:
     {{- range $key, $val := .Values.labels }}
     {{ $key }}: {{ $val | quote }}
