--- a/cb-radarr/templates/service.yaml
+++ b/cb-radarr/templates/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Chart.Name }}
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: "{{ .Values.dns.fqdn }}"
+    external-dns.alpha.kubernetes.io/ttl: "{{ .Values.dns.ttl }}"
   labels:
     {{- range $key, $val := .Values.labels }}
     {{ $key }}: {{ $val | quote }}
